<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_welcome"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_cau1"
        android:icon="@drawable/ic_nav_convert"
        android:title="@string/nav_convert" />
    <item
        android:id="@+id/navigation_cau2"
        android:icon="@drawable/ic_nav_health"
        android:title="@string/nav_bmi" />
    <item
        android:id="@+id/navigation_cau3"
        android:icon="@drawable/ic_nav_landscape"
        android:title="@string/nav_landscape" />
    <item
        android:id="@+id/navigation_cau4"
        android:icon="@drawable/ic_nav_book"
        android:title="@string/nav_books" />
</menu>